<resources>
    <string name="app_name">Uniparels</string>
    <string name="database">POS_DATABASE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discount">10% Discount</string>
    <string name="search">Search</string>
    <string name="dashboard">Dashboard</string>
    <string name="billingScreen">Billing</string>
    <string name="orderHistory">Order History</string>
    <string name="saleReport">Reports</string>
    <string name="stockScreen">Stock</string>
    <string name="inventory">Inventory</string>
    <string name="no_network">No connection to the internet</string>
    <string name="login_substring">Lorem Ipsum dolor sit amet, consectour adipcing\n elit. Curabitur mollis purus et sem lobortis condimen-\nturm</string>
    <string name="login_heading">Welcome to\nPoint of Sale App</string>
    <string name="sizeList">Size</string>
    <string name="display">Display</string>
    <string name="add_to_order">Add to Order</string>
    <string name="share">Share</string>
    <string name="add_student_details">Add Student Details</string>
    <string name="student_id">Student ID</string>
    <string name="student_name">Student Name</string>
    <string name="class_str">Class</string>
    <string name="section">Section</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="father_name">Father Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email ID</string>
    <string name="add_details">Add Details</string>
    <string name="close">Close</string>
    <string name="sale_summary">Sale Summary</string>
    <string name="stock_report">Stock Report</string>
    <string name="close_day">Close Day</string>
    <string name="remove">Remove</string>
    <string name="no_products">No Products available</string>
    <string name="field_required">This field is required</string>
    <string name="no_indents_available">No indents available</string>
    <string name="no_boxes_available">No boxes available</string>
    <string name="submit">Submit</string>
    <string name="copyright">Copyright © 2019 POS. All Rights Reserved</string>
    <string name="sub_total">Sub Total</string>
    <string name="tax_included">Tax Included</string>
    <string name="discount_offer">Discount / Offer</string>
    <string name="total">Total</string>
    <string name="place_order">Place Order</string>
    <string name="inventory_details">Inventory Details</string>
    <string name="search_by_indent_serial_no">Search by Indent Serial No</string>
    <string name="add">Add</string>
    <string name="stock_transfer">STOCK TRANSFER</string>
    <string name="dialog_title">Please wait</string>
    <string name="dialog_message">Loading</string>
    <string name="otp">OTP</string>
    <string name="no_box_items">Box items not available</string>
    <string name="complete_order">Complete Order</string>
    <string name="student_id_colan">Student ID :</string>
    <string name="student_name_colan">Student Name :</string>
    <string name="class_colan">Class :</string>
    <string name="phone_number_colan">Phone Number :</string>
    <string name="email_id_colan">Email ID :</string>
    <string name="father_name_colan">Father Name :</string>
    <string name="cash">Cash</string>
    <string name="paytm">PayTM</string>
    <string name="card">Card</string>
    <string name="select_indent_to_get_boxes">Select Indent to get boxes</string>
    <string name="billing_screen">Billing Screen</string>
    <string name="total_sale">Total Sale</string>
    <string name="stock">Stock</string>
    <string name="status">Status</string>
    <string name="all_activities">All Activities</string>
    <string name="filters_the_activities">Filters the activities</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="address">Address</string>
    <string name="mother_name">Mother Name</string>
    <string name="items">Items</string>
    <string name="first">First</string>
    <string name="last">Last</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="return_text">Return</string>
    <string name="exchange">Exchange</string>
    <string name="amount">Amount</string>
    <string name="no_of_items">No of Items</string>
    <string name="no_items_to_return">No items to return</string>
    <string name="no_new_notifications">No new notifications</string>
    <string name="standard">Standard</string>
    <string name="back">Back</string>
    <string name="billing_id">Billing ID</string>
    <string name="check">Check</string>
    <string name="no_items_in_bag">No Items in bag</string>
    <string name="no_new_items">No new items</string>
    <string name="items_matched">All Items are matched</string>
    <string name="unauthorized_person">You are not an authorized manager.</string>
    <string name="logout">Logout</string>
    <string-array name="standard_array">
        <item>I</item>
        <item>II</item>
        <item>III</item>
        <item>IV</item>
        <item>V</item>
        <item>VI</item>
        <item>VII</item>
        <item>VIII</item>
        <item>IX</item>
        <item>X</item>
        <item>XI</item>
        <item>XII</item>
    </string-array>

    <string-array name="section_array">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>
</resources>
