<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--top layout-->
            <LinearLayout
                android:id="@+id/topLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/denim"
                android:padding="10dp"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_student_details"
                    android:textColor="@color/white1"
                    android:layout_marginStart="8dp"
                    android:textSize="24sp"/>

            </LinearLayout>

            <!--student id and name layout-->
            <LinearLayout
                android:id="@+id/idNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/topLayout">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/studentIDInputLayout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/studentIDText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/student_id"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/studentNameInputLayout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/studentNameText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/student_name" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <!--class and section layout-->
            <LinearLayout
                android:id="@+id/classSectionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/idNameLayout">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/classInputLayout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/classText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/class_str" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sectionInputLayout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/sectionText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/section" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <!--gender_type layout-->
            <LinearLayout
                android:id="@+id/genderLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@+id/classSectionLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/gender"
                    android:textSize="17sp" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <RadioButton
                        android:id="@+id/maleRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/male"
                        android:textColor="@color/grey"
                        android:textSize="17sp" />

                    <RadioButton
                        android:id="@+id/femaleRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:textColor="@color/grey"
                        android:textSize="17sp" />

                </RadioGroup>

                <TextView
                    android:id="@+id/genderErrorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="@string/field_required"
                    android:textColor="@color/danger"
                    android:textSize="13sp"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/fatherNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genderLayout">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fatherNameInputLayout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/fatherNameText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/father_name" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/phoneLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fatherNameLayout">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneInputLayout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/phoneText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/phone_number"
                        android:inputType="phone" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneLayout">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailInputLayout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/emailText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailLayout">

                <androidx.cardview.widget.CardView
                    android:id="@+id/addDetailsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_margin="5dp"
                    app:cardBackgroundColor="@color/denim"
                    app:cardCornerRadius="10dp"
                    app:contentPadding="5dp">

                    <TextView
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/add_details"
                        android:textColor="@color/white1"
                        android:textSize="17sp" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/closeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_margin="5dp"
                    app:cardBackgroundColor="@color/grey"
                    app:cardCornerRadius="10dp"
                    app:contentPadding="5dp">

                    <TextView
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/close"
                        android:textColor="@color/white1"
                        android:textSize="17sp" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
